--- a/public/css/style.css
+++ b/public/css/style.css
@@ -440,8 +440,8 @@ header .intro-text {
 	color: rgba(255,255,255,.75);
 }
 #contact .contact-text{
-	margin-right: 100px;
-	margin-bottom: 100px;
+	margin-right: 0px;
+	margin-bottom: 0px;
 }
 #contact .section-title {
 	margin-bottom: 40px;
@@ -476,12 +476,24 @@ header .intro-text {
 }
 #contact .text-danger {
 	color: #cc0033;
-	text-align: left;
+	text-align: right;
+	border-radius: 50%;
 }
 #contact .btn-custom {
+
+	font-size: 22px;
+    width: 120px;
+    height: 120px;
+    padding: 40px 0;
+    background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);
+    border-radius: 50%;
+    color: #fff;
+    box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);
+
+	/*
 	margin: 30px 0;
 	background: transparent;
-	border: 2px solid #fff;
+	border: 2px solid #fff;*/
 }
 #contact .btn-custom:hover {
 	color: #1f386e;
@@ -563,6 +575,7 @@ color: #777;
 	color: #608dfd;
 	background: #fff;
 }
+
 /* Footer Section*/
 #footer {
 	background: #f6f6f6;
