--- a/public/css/style copy.css
+++ b/public/css/style copy.css
@@ -40,12 +40,14 @@ p.intro {
 	line-height: 24px;
 }
 a {
-	color: #608dfd;
+	/*color: #608dfd;*/
+	
 	font-weight: 400;
 }
 a:hover, a:focus {
 	text-decoration: none;
-	color: #608dfd;
+	/*color: #608dfd;*/
+	color:rgb(241, 13, 211);
 }
 ul, ol {
 	list-style: none;
@@ -64,7 +66,7 @@ hr {
 	margin-bottom: 20px;
 	border: 0;
 }
-/* Navigation */
+/* Navigation 
 #menu {
 	padding: 15px;
 	transition: all 0.8s;
@@ -180,13 +182,13 @@ hr {
 a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
 	outline: none;
 	outline-offset: none;
-}
-/* Header Section */
+}*/
+/* Header Section 
 .intro {
 	display: table;
 	width: 100%;
 	padding: 0;
-	background: url(../img/intro-bg.jpg) center center no-repeat;
+	background: url(../img/ehpad.jpg) center center no-repeat;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -221,23 +223,37 @@ header .intro-text {
 	padding-top: 350px;
 	padding-bottom: 200px;
 	text-align: center;
-}
+}*/
 /* Features Section */
 #features {
 	padding: 80px 0;
 	background: #f6f6f6;
 }
-#features i.fa {
+#features h4 {
+	padding-top: 20px;
+}
+#features img2 {
 	font-size: 38px;
 	margin-bottom: 20px;
 	transition: all 0.5s;
 	color: #fff;
 	width: 100px;
 	height: 100px;
-	padding: 30px 0;
+	padding: 0px 0;
 	border-radius: 50%;
-	background: linear-gradient(to right, #492b2f 0%, #dda3a8 100%);
+	/*background: linear-gradient(to right, #492b2f 0%, #dda3a8 100%);*/
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
+}
+
+#features img {
+	width: 110px;
+	height: 110px;
+	content : " ";
+	color:#720a0a;
+	border: solid;
+	border-radius: 50%;
+	padding: 10px;
+	box-shadow: 10px 10px 10px rgba(170, 77, 77, 0.555);
 }
 /* About + contact 
 #about {
@@ -376,7 +392,7 @@ header .intro-text {
 .hover-bg:hover .hover-text {
 	opacity: 1;
 }
-/* Testimonials Section */
+/* Testimonials Section 
 #testimonials {
 	padding: 100px 0;
 	background: #f6f6f6;
@@ -414,7 +430,7 @@ header .intro-text {
 	font-size: 15px;
 	font-weight: 600;
 	color: #666;
-}
+}*/
 /* Team Section */
 #team {
 	padding: 100px 0;
@@ -434,14 +450,56 @@ header .intro-text {
 	color: #888;
 }
 /* Contact Section */
+.thanks {
+	padding: 20px;
+	color: rgba(255,255,255);
+	position: absolute;
+	background-color:#fff;;
+	padding-left: 20px;
+	padding-right: 20px;
+	background: linear-gradient(to left, #ca1129 0%, #bbb5b6 100%);
+
+	/*font-family: 'Open Sans', sans-serif;*/
+	margin-top: 50px;
+	border-radius: 50px 0px 50px 0px;
+
+	
+}
+
 #contact {
-	padding: 100px 0 60px 0;
-	background: linear-gradient(to right, #492b2f 0%, #dda3a8 100%);
+	padding: 50px 0 60px 0;
+	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
 	color: rgba(255,255,255,.75);
 }
+
+
+#shadow img {
+	border-radius: 80px 0px 80px 0px;
+	box-shadow: 12px 8px 12px rgb(246, 222, 248);	
+	/*width:650px;
+	border:3px solid rgb(247, 241, 241);*/
+}
+
+#contact .home-sdv {
+	border-radius: 50px 0px 50px 0px;
+	img {
+		border-radius: 50px 0px 50px 0px;
+	}
+  }
+
+#contact .form {
+	margin-top: 70px;
+	margin-left: 0px;
+}
+
+#contact .custom-select mr-sm-2{
+	margin-left: 40px;
+}
+
 #contact .contact-text{
-	margin-right: 0px;
-	margin-bottom: 0px;
+	/*margin-right: 70px;
+	margin-bottom: 70px;
+	margin-bottom: 70px;*/
 }
 #contact .section-title {
 	margin-bottom: 40px;
@@ -450,6 +508,7 @@ header .intro-text {
 	font-size: 16px;
 }
 #contact h2 {
+	text-transform: none;
 	color: #fff;
 	margin-top: 10px;
 	margin-bottom: 15px;
@@ -471,22 +530,21 @@ header .intro-text {
 	padding-bottom: 20px;
 	font-weight: 400;
 }
-#contact form {
-	padding-top: 20px;
-}
+
 #contact .text-danger {
 	color: #cc0033;
 	text-align: right;
 	border-radius: 50%;
 }
 #contact .btn-custom {
-
 	font-size: 22px;
-    width: 120px;
-    height: 120px;
-    padding: 40px 0;
-    background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);
-    border-radius: 50%;
+    width: 140px;
+    height: 40px;
+	margin-top: 10px;
+    padding-top: 5px;
+   /* background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);*/
+	background: #cc0033;
+    border-radius: 50px;
     color: #fff;
     box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);
 
@@ -500,12 +558,32 @@ header .intro-text {
 	background: #fff;
 }
 
-label {
-	font-size: 12px;
+#contact label {
+	background-color: ;
+	font-size: 20px;
 	font-weight: 400;
-	font-family: 'Open Sans', sans-serif;
+	/* font-family: 'Open Sans', sans-serif; */
 	float: left;
+	/* icvi-------------- */
+	padding-bottom: 0px;
 }
+
+select {
+	color:#720a0a;
+	background-color:#fff;;
+	padding-left: 10px;
+	padding-right: 10px;
+
+	font-size: 20px;
+	font-weight: 400;
+	/*font-family: 'Open Sans', sans-serif;*/
+	margin: 0px;
+	border-radius: 20px ;
+	height: 40px;
+	
+}
+
+
 #contact .form-control {
 	display: block;
 	width: 100%;
@@ -516,7 +594,7 @@ label {
 	background-color: #fff;
 	background-image: none;
 	border: 1px solid #ddd;
-	border-radius: 0;
+	border-radius: 50px ;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	-webkit-transition: none;
@@ -530,17 +608,17 @@ label {
 	box-shadow: transparent;
 }
 .form-control::-webkit-input-placeholder {
-color: #777;
+color:#720a0a;
 }
 .form-control:-moz-placeholder {
-color: #777;
+color: rgb(15, 164, 233);
 }
 .form-control::-moz-placeholder {
 color: #777;
 }
 .form-control:-ms-input-placeholder {
-color: #777;
-}
+color: rgb(13, 236, 106);
+} /*
 #contact .contact-item {
 	margin: 20px 0;
 }
@@ -552,6 +630,7 @@ color: #777;
 #contact .contact-item i.fa {
 	margin-right: 10px;
 }
+/*
 #contact .social {
 	border-top: 1px solid rgba(255,255,255,0.15);
 	padding-top: 50px;
@@ -575,9 +654,9 @@ color: #777;
 #contact .social i.fa:hover {
 	color: #608dfd;
 	background: #fff;
-}
+}*/
 
-/* Footer Section*/
+/* Footer Section
 #footer {
 	background: #f6f6f6;
 	padding: 30px 0;
@@ -591,7 +670,7 @@ color: #777;
 }
 #footer a:hover {
 	border-bottom: 2px solid #608dfd;
-}
+}*/
 
 @media (max-width: 768px) {
 #about img {
