--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,14 +41,14 @@ p.intro {
 	line-height: 24px;
 }
 a {
-	/*color: #608dfd;*/
-	
+	color: #36c0c0;
+	text-decoration-line: underline;
 	font-weight: 400;
 }
 a:hover, a:focus {
 	text-decoration: none;
 	/*color: #608dfd;*/
-	color:rgb(241, 13, 211);
+	font-weight: bold;
 }
 ul, ol {
 	list-style: none;
@@ -596,7 +596,6 @@ select {
 	
 }
 
-
 #contact .form-control {
 	display: block;
 	width: 100%;
@@ -620,6 +619,8 @@ select {
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
 }
+
+form-check-input{}
 .form-control::-webkit-input-placeholder {
 color:#720a0a;
 }
