--- a/public/css/style.css
+++ b/public/css/style.css
@@ -494,11 +494,9 @@ header .intro-text {
 #shadow img {
 	border-radius: 80px 0px 80px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
+	border-bottom:3px solid rgb(247, 241, 241); 
 
-	/*width:650px;
-	border:3px solid rgb(247, 241, 241);*/
 }
-
 
 #contact .form {
 	margin-top: 70px;
@@ -572,30 +570,19 @@ header .intro-text {
 	background: #fff;
 }
 
-#inlineFormCustomSelectt {
-	background-color: ;
-	margin-bottom:20px ;
-	font-size: 18px;
-	font-weight: 400;
-	/* font-family: 'Open Sans', sans-serif; */
-	float: left;
-	/* icvi-------------- */
-	padding-bottom: 0px;
-}
-
 select {
 	color:#720a0a;
-	background-color:#fff;;
+	background-color:#fff;
 	padding-left: 10px;
 	padding-right: 10px;
-
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 400;
 	/*font-family: 'Open Sans', sans-serif;*/
 	margin: 0px;
-	border-radius: 20px ;
+	border-radius: 20px 0px;
 	height: 40px;
-	
+	box-shadow: 8px 8px 8px rgba(246, 222, 248, 0.63);	
+	border-bottom:5px solid #cc0033; 
 }
 
 #contact .form-control {
@@ -614,6 +601,7 @@ select {
 	-webkit-transition: none;
 	-o-transition: none;
 	transition: none;
+	background-color: rgb(252, 237, 248) !important;
 }
 #contact .form-control:focus {
 	border-color: #999;
@@ -621,17 +609,22 @@ select {
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
 }
-.form-check{
+
+.form-check {
 	color: rgb(255, 255, 255);
 	font-size: 90%;
 	padding-left: 0px;
 }
+.form-check-label {
+	margin-left: 2px;
+	padding-bottom: 0px;
+  }
 
 .form-control::-webkit-input-placeholder {
 color:#720a0a;
 }
 .form-control:-moz-placeholder {
-color: rgb(15, 164, 233);
+color: rgb(233, 15, 204);
 }
 .form-control::-moz-placeholder {
 color: #777;
