--- a/public/css/style-copy.css
+++ b/public/css/style-copy.css
@@ -1,5 +1,5 @@
 body, html {
-	font-family: '', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #777;
@@ -8,7 +8,7 @@ body, html {
 	height: 100% !important;
 }
 h2, h3, h4 {
-	font-family: '', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 h2 {
 	text-transform: uppercase;
@@ -338,7 +338,7 @@ header .intro-text {
 	width: 120px;
 	height: 120px;
 	padding: 40px 0;
-	background: linear-gradient(to right, #8f3810 0%, #d40740 100%);
+	background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);
 	border-radius: 50%;
 	color: #fff;
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
@@ -369,10 +369,10 @@ header .intro-text {
 	}
 
 .portfolio-item img{
-	border-radius: 60px 0px 60px 0px;
-	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
-	border-top:2px solid rgb(255, 255, 255); 
+	border-radius: 80px 0px 80px 0px;
+	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);
 }
+
 
 }
 .portfolio-item .hover-bg {
@@ -385,7 +385,7 @@ header .intro-text {
 	text-align: center;
 	margin: 0 auto;
 	color: #fff;
-	background: linear-gradient(to right, #8f3810 0%, #d40740 100%);
+	background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);
 	padding: 30% 0 0 0;
 	height: 100%;
 	width: 100%;
@@ -476,10 +476,11 @@ header .intro-text {
 	position: absolute;
 	background-color:#fff;;
 	padding-left: 20px;
-	padding-right: 0px;
-	background: linear-gradient(to left, #d40740 0%, #bbb5b6 100%);
-	font-family: 'Open Sans', sans-serif;
-	margin-top: 61px;
+	padding-right: 20px;
+	background: linear-gradient(to left, #ca1129 0%, #bbb5b6 100%);
+
+	/*font-family: 'Open Sans', sans-serif;*/
+	margin-top: 50px;
 	border-radius: 50px 0px 50px 0px;
 }
 
@@ -491,9 +492,10 @@ header .intro-text {
 
 
 #shadow img {
-	border-radius: 60px 0px 60px 0px;
+	border-radius: 80px 0px 80px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
 	border-bottom:3px solid rgb(255, 255, 255); 
+
 }
 
 #contact .form {
@@ -505,6 +507,8 @@ header .intro-text {
 	margin-left: 40px;
 }
 
+#contact .contact-text{
+}
 #contact .section-title {
 	margin-bottom: 40px;
 }
@@ -529,41 +533,37 @@ header .intro-text {
 }
 #contact h3 {
 	color: #fff;
-	/*ici 2 lignes*/ 
 	margin-top: 80px;
 	margin-bottom: 25px;
 	padding-bottom: 20px;
-	margin-bottom: 0px;
 	font-weight: 400;
 }
 
 #contact .text-danger {
-	color: #d40740;
+	color: #cc0033;
 	text-align: right;
 	border-radius: 50%;
 }
 #contact .btn-custom {
-	position: relative;
 	font-size: 22px;
     width: 140px;
     height: 40px;
-	margin: 20px;
-	margin-left: 10px;
+	margin-top: 10px;
     padding-top: 5px;
    /* background: linear-gradient(to right, #8f3810 0%, #fb5c5c 100%);*/
-	background: #d40740;
+	background: #cc0033;
     border-radius: 50px;
     color: #fff;
     box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);
+
+	/*
+	margin: 30px 0;
+	background: transparent;
+	border: 2px solid #fff;*/
 }
 #contact .btn-custom:hover {
 	color: #1f386e;
 	background: #fff;
-	border-bottom: cyan;
-}
-
-#contact h3{
-	margin-bottom: 5px;
 }
 
 select {
@@ -573,16 +573,13 @@ select {
 	padding-right: 10px;
 	font-size: 16px;
 	font-weight: 400;
-	font-family: '', sans-serif;
+	/*font-family: 'Open Sans', sans-serif;*/
 	margin: 0px;
 	border-radius: 20px 0px;
 	height: 40px;
-	box-shadow: 8px 8px 8px rgba(246, 222, 248, 0.63);
-	border-bottom:5px solid #cc0033; 	
+	box-shadow: 8px 8px 8px rgba(246, 222, 248, 0.63);	
+	border-bottom:5px solid #cc0033; 
 	cursor: pointer;
-}
-select:hover {
-	font-weight: bold;
 }
 
 #contact .form-control {
