--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,164 +72,14 @@ hr {
 	margin-bottom: 20px;
 	border: 0;
 }
-/* Navigation 
-#menu {
-	padding: 15px;
-	transition: all 0.8s;
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
-#menu.navbar-default {
-	background-color: #fff;
-	border-color: rgba(231, 231, 231, 0);
-	box-shadow: 0 0 10px rgba(0,0,0,0.15)
-}
-#menu a.navbar-brand {
-	font-family: 'Raleway', sans-serif;
-	font-size: 24px;
-	font-weight: 700;
-	color: #333;
-	text-transform: uppercase;
-}
-#menu.navbar-default .navbar-nav > li > a {
-	font-family: 'Lato', sans-serif;
-	text-transform: uppercase;
-	color: #555;
-	font-size: 15px;
-	font-weight: 400;
-	padding: 8px 2px;
-	border-radius: 0;
-	margin: 9px 20px 0 20px;
-}
-#menu.navbar-default .navbar-nav > li > a:after {
-	display: block;
-	position: absolute;
-	left: 0;
-	bottom: -1px;
-	width: 0;
-	height: 2px;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-	content: "";
-	transition: width 0.2s;
-}
-#menu.navbar-default .navbar-nav > li > a:hover:after {
-	width: 100%;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	background-color: transparent;
-}
-.navbar-default .navbar-nav > .active > a:after, .navbar-default .navbar-nav > .active > a:hover:after, .navbar-default .navbar-nav > .active > a:focus:after {
-	display: block !important;
-	position: absolute !important;
-	left: 0 !important;
-	bottom: -1px !important;
-	width: 100% !important;
-	height: 2px !important;
-	background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
-	content: "" !important;
-	transition: width 0.2s !important;
-}
-.navbar-toggle {
-	border-radius: 0;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #fff;
-	border-color: #608dfd;
-}
-.navbar-default .navbar-toggle:hover>.icon-bar {
-	background-color: #608dfd;
-}
-.section-title {
-	margin-bottom: 70px;
-}
-.section-title h2 {
-	position: relative;
-	margin-top: 10px;
-	margin-bottom: 15px;
-	padding-bottom: 15px;
-}
-.section-title h2::after {
-	position: absolute;
-	content: "";
-	background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-	height: 4px;
-	width: 60px;
-	bottom: 0;
-	margin-left: -30px;
-	left: 50%;
-}
-.section-title p {
-	font-size: 18px;
-}
-.btn-custom {
-	font-family: 'Raleway', sans-serif;
-	text-transform: uppercase;
-	color: #fff;
-	background-color: #5ca9fb;
-	background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-	padding: 14px 34px;
-	letter-spacing: 1px;
-	margin: 0;
-	font-size: 15px;
-	font-weight: 500;
-	border-radius: 25px;
-	transition: all 0.5s linear;
-	border: 0;
-}
-.btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
-	color: #fff;
-	background-image: none;
-	background-color: #6372ff;
-}
-.btn:active, .btn.active {
-	background-image: none;
-	outline: 0;
-	-webkit-box-shadow: none;
-	box-shadow: none;
-}
-a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
-	outline: none;
-	outline-offset: none;
-}*/
-/* Header Section 
-.intro {
-	display: table;
-	width: 100%;
-	padding: 0;
-	background: url(../img/ehpad.jpg) center center no-repeat;
-	background-color: #e5e5e5;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
-}
-.intro .overlay {
-	background: rgba(0,0,0,0.2);
-}
-.intro h1 {
-	font-family: 'Raleway', sans-serif;
-	color: #fff;
-	font-size: 82px;
-	font-weight: 700;
-	text-transform: uppercase;
-	margin-top: 0;
-	margin-bottom: 10px;
-}
-.intro h1 span {
-	font-weight: 800;
-	color: #5ca9fb;
-}
-.intro p {
-	color: #fff;
-	font-size: 22px;
-	font-weight: 300;
-	line-height: 30px;
-	margin: 0 auto;
-	margin-bottom: 60px;
-}
-header .intro-text {
-	padding-top: 350px;
-	padding-bottom: 200px;
-	text-align: center;
-}*/
+
 /* Features Section */
 #features {
 	padding: 80px 0;
@@ -247,13 +97,12 @@ header .intro-text {
 	width: 110px;
 	height: 110px;
 }
-
 #features img {
 	width: 110px;
 	height: 110px;
 
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
 
 	color:#720a0a;
 	border: solid;
@@ -261,54 +110,6 @@ header .intro-text {
 	padding: 10px;
 	box-shadow: 10px 10px 10px rgba(170, 77, 77, 0.555);
 }
-/* About + contact 
-#about {
-	padding: 100px 0;
-}
-#about h3 {
-	font-size: 22px;
-	margin: 0 0 20px 0;
-}
-#about h2 {
-	position: relative;
-	margin-bottom: 15px;
-	padding-bottom: 15px;
-}
-#about h2::after {
-	position: absolute;
-	content: "";
-	background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-	height: 4px;
-	width: 60px;
-	bottom: 0;
-	left: 0;
-}
-#about .about-text li {
-	margin-bottom: 6px;
-	margin-left: 6px;
-	list-style: none;
-	padding: 0;
-}
-#about .about-text li:before {
-	content: '\f00c';
-	font-family: 'FontAwesome';
-	color: #5ca9fb;
-	font-size: 11px;
-	font-weight: 300;
-	padding-right: 8px;
-}
-#about img {
-	width: 520px;
-	margin-top: 10px;
-	background: #fff;
-	border-right: 0;
-	box-shadow: 0 0 50px rgba(0,0,0,0.06);
-}
-#about p {
-	line-height: 24px;
-	margin: 30px 0;
-}
-*/
 
 /* Services Section */
 #services {
@@ -354,14 +155,12 @@ header .intro-text {
 	margin-bottom: 40px;
 }
 
-
 /* Portfolio Section */
 #portfolio  {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
 }
-
 .portfolio-item {
 	padding-top: 20px ;
 	padding-bottom: 20px ;
@@ -371,7 +170,6 @@ header .intro-text {
 	border-radius: 60px 0px 60px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
 	border-top:2px solid rgb(255, 255, 255); 
-}
 
 }
 .portfolio-item .hover-bg {
@@ -411,45 +209,7 @@ header .intro-text {
 .hover-bg:hover .hover-text {
 	opacity: 1;
 }
-/* Testimonials Section 
-#testimonials {
-	padding: 100px 0;
-	background: #f6f6f6;
-}
-#testimonials i {
-	color: #e6e6e6;
-	font-size: 32px;
-	margin-bottom: 20px;
-}
-.testimonial {
-	position: relative;
-	padding: 20px;
-}
-.testimonial-image {
-	float: left;
-	margin-right: 15px;
-}
-.testimonial-image, .testimonial-image img {
-	display: block;
-	width: 64px;
-	height: 64px;
-	border-radius: 50%;
-}
-.testimonial-content {
-	position: relative;
-	overflow: hidden;
-}
-.testimonial-content p {
-	margin-bottom: 0;
-	font-size: 14px;
-	font-style: italic;
-}
-.testimonial-meta {
-	margin-top: 10px;
-	font-size: 15px;
-	font-weight: 600;
-	color: #666;
-}*/
+
 /* Team Section */
 #team {
 	padding: 100px 0;
@@ -481,14 +241,11 @@ header .intro-text {
 	margin-top: 61px;
 	border-radius: 50px 0px 50px 0px;
 }
-
 #contact {
 	padding: 50px 0 60px 0;
 	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
 	color: rgba(255,255,255,.75);
 }
-
-
 #shadow img {
 	border-radius: 60px 0px 60px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
@@ -503,7 +260,6 @@ header .intro-text {
 #contact .custom-select mr-sm-2{
 	margin-left: 40px;
 }
-
 #contact .section-title {
 	margin-bottom: 40px;
 }
@@ -535,7 +291,6 @@ header .intro-text {
 	margin-bottom: 0px;
 	font-weight: 400;
 }
-
 #contact .text-danger {
 	color: #d40740;
 	text-align: right;
@@ -560,11 +315,9 @@ header .intro-text {
 	background: #fff;
 	border-bottom: cyan;
 }
-
 #contact h3{
 	margin-bottom: 5px;
 }
-
 select {
 	color:#720a0a;
 	background-color:#fff;
@@ -583,7 +336,6 @@ select {
 select:hover {
 	font-weight: bold;
 }
-
 #contact .form-control {
 	display: block;
 	width: 100%;
@@ -600,7 +352,7 @@ select:hover {
 	-webkit-transition: none;
 	-o-transition: none;
 	transition: none;
-	background-color: rgb(252, 237, 248) !important;
+	background-color: rgb(253, 243, 250) !important;
 }
 #contact .form-control:focus {
 	border-color: #999;
@@ -608,7 +360,6 @@ select:hover {
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
 }
-
 .form-check {
 	color: rgb(255, 255, 255);
 	font-size: 90%;
@@ -630,45 +381,9 @@ color: #777;
 }
 .form-control:-ms-input-placeholder {
 color: rgb(13, 236, 106);
-} /*
-#contact .contact-item {
-	margin: 20px 0;
 }
-#contact .contact-item span {
-	color: rgba(255,255,255,1);
-	margin-bottom: 10px;
-	display: block;
-}
-#contact .contact-item i.fa {
-	margin-right: 10px;
-}
-/*
-#contact .social {
-	border-top: 1px solid rgba(255,255,255,0.15);
-	padding-top: 50px;
-	margin-top: 50px;
-	text-align: center;
-}
-#contact .social ul li {
-	display: inline-block;
-	margin: 0 20px;
-}
-#contact .social i.fa {
-	font-size: 22px;
-	width: 48px;
-	height: 48px;
-	padding: 12px 0;
-	border: 2px solid #fff;
-	color: #fff;
-	border-radius: 50%;
-	transition: all 0.3s;
-}
-#contact .social i.fa:hover {
-	color: #608dfd;
-	background: #fff;
-}*/
 
-Footer Section
+/*Footer Section */
 #footer {
 	background: #f6f6f6;
 	padding: 30px 0;
@@ -680,7 +395,6 @@ Footer Section
 	width: 40%;
 	text-align:center ;
 }
-
 #footer p {
 	color: #888;
 	font-size: 14px;
