--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,21 +242,20 @@ padding-bottom: 30px;
 	box-shadow: 21px 21px 20px#720a0a;
 }
 #contact {
+	
 	padding: 50px 0 60px 0;
 	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
 	color: rgba(255,255,255,.75);
 	border: 1px solid;
 }
-/*#contact .form{
-	border: 1px solid;
-}*/
+
 #shadow img {
 	border-radius: 60px 0px 60px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
 	border-bottom:3px solid rgb(255, 255, 255); 
 }
 #contact .form {
-	margin-top: 70px;
+	margin-top: 0px;
 	margin-left: 0px;
 }
 #contact .custom-select mr-sm-2{
@@ -271,10 +270,10 @@ padding-bottom: 30px;
 #contact h2 {
 	text-transform: none;
 	color: #fff;
-	margin-top: 10px;
-	margin-top: 35px;
-	padding-bottom: 35px;
-	text-shadow: 11px 11px 10px #492b2f;
+	margin-top: px;
+	padding-bottom: 45px;
+	text-shadow: 3px 3px 3px #492b2f;
+	text-align: center;
 }
 #contact .section-title h2::after {
 	position: absolute;
@@ -288,9 +287,12 @@ padding-bottom: 30px;
 #contact h3 {
 	color: #fff;
 	font-weight: 400;
-	text-shadow: 11px 11px 5px #492b2f;
+	text-shadow: 3px 3px 3px #1d1112;
 	padding-bottom: 30px;
-	padding-top: 60px;
+	padding-top: 0px;
+	font-size: 29px;
+	line-height:35px;
+	margin: 05px 0px 40px;
 }
 
 #contact .text-danger {
@@ -315,12 +317,8 @@ padding-bottom: 30px;
 #contact .btn-custom:hover {
 	color: #1f386e;
 	background: #fff;
-	border-bottom: cyan;
 }
-#contact h3{
-	margin-bottom: 5px;
-	font-weight: bold;
-}
+
 select {
 	color:#720a0a;
 	background-color:#fff;
@@ -372,7 +370,12 @@ select:hover {
 	margin-left: 2px;
 	padding-bottom: 0px;
   }
-
+#contact .form-check-readmore{
+	display: none;
+}
+#contact a {
+	display: none;
+}
 .form-control::-webkit-input-placeholder {
 color:#720a0a;
 }
@@ -428,13 +431,33 @@ color: rgb(13, 236, 106);
 	font-size: 18px;
 	padding: 15px 20px 20px 30px;
 }
-#contact .tel{
-	margin-top: -40px;
-	text-align: left;
+#contact {
+	border-radius: 50px;
+}
+#features{
+	border-radius: 50px;
+}
+#portfolio {
+	border-radius: 50px;
+}
+#footer {
+	border-radius: 00px 0px 00px 0px;
+}
+#footer img {
+	width: 80%;
+	margin: auto;
+	padding: auto;
+	text-align: center;
 }
 #contact  h2 {
 	text-transform: none;
 	color: #fff;
 	font-size: 30px;
 }
+#contact h3 {
+	padding-top: 35px;
+	padding-bottom: 0px;
+	font-size: 25px;
+}
+
 }
