--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,11 +242,17 @@ padding-bottom: 30px;
 	box-shadow: 21px 21px 20px#720a0a;
 }
 #contact {
-	
 	padding: 50px 0 60px 0;
 	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
 	color: rgba(255,255,255,.75);
 	border: 1px solid;
+}
+#contact .formStyle{
+	padding: 30px;
+	background: linear-gradient(to left, #755f62 0%, #fad7da 100%);
+    border-radius: 50px 0px;
+    color: #fff;
+	/*box-shadow: 11px 11px 10px #f1e2e4;*/
 }
 
 #shadow img {
@@ -285,11 +291,12 @@ padding-bottom: 30px;
 	left: 30px;
 }
 #contact h3 {
+	margin: auto;
+	padding: auto;
+	text-align: center;
 	color: #fff;
 	font-weight: 400;
 	text-shadow: 3px 3px 3px #1d1112;
-	padding-bottom: 30px;
-	padding-top: 0px;
 	font-size: 29px;
 	line-height:35px;
 	margin: 05px 0px 40px;
