--- a/public/css/style copy.css
+++ b/public/css/style copy.css
@@ -72,7 +72,6 @@ hr {
 	margin-bottom: 20px;
 	border: 0;
 }
-
 input:focus,
 select:focus,
 textarea:focus,
@@ -107,9 +106,14 @@ button:focus {
 	box-shadow: 10px 10px 10px rgba(170, 77, 77, 0.555);
 }
 #features h6 {
-	margin-top: 20px;
     margin-left: auto;
     margin-right: auto; 
+	color:#726f6f;
+	border-radius: 00px 60px 0px 60px;
+	line-height: 30px;
+	text-align: left 
+}
+#features .contact-text-container {
 	color:#726f6f;
 	border: solid;
 	border-radius: 00px 60px 0px 60px;
@@ -118,6 +122,7 @@ button:focus {
 	line-height: 30px;
 	text-align: left 
 }
+
 #features h3 {
 font-size: 25px;
 padding-bottom: 30px;
@@ -242,11 +247,17 @@ padding-bottom: 30px;
 	box-shadow: 21px 21px 20px#720a0a;
 }
 #contact {
-	
 	padding: 50px 0 60px 0;
-	background: linear-gradient(to left, #492b2f 0%, #fad7da 100%);
+	background: linear-gradient(to left, #492b2f 0%, #fad7da 90%);
 	color: rgba(255,255,255,.75);
 	border: 1px solid;
+}
+#contact .formStyle {
+	padding: 30px;
+	background: linear-gradient(to left, #755f62 0%, #fad7da 100%);
+    border-radius: 50px 0px;
+    color: #fff;
+	/*box-shadow: 11px 11px 10px #f1e2e4;*/
 }
 
 #shadow img {
@@ -271,9 +282,13 @@ padding-bottom: 30px;
 	text-transform: none;
 	color: #fff;
 	margin-top: px;
-	padding-bottom: 45px;
+	padding-bottom: px;
 	text-shadow: 3px 3px 3px #492b2f;
 	text-align: center;
+}
+#contact .contact-text-title2 {
+	margin-top: 20px;
+	padding-bottom: 20px;
 }
 #contact .section-title h2::after {
 	position: absolute;
@@ -285,11 +300,12 @@ padding-bottom: 30px;
 	left: 30px;
 }
 #contact h3 {
+	margin: auto;
+	padding: auto;
+	text-align: center;
 	color: #fff;
 	font-weight: 400;
 	text-shadow: 3px 3px 3px #1d1112;
-	padding-bottom: 30px;
-	padding-top: 0px;
 	font-size: 29px;
 	line-height:35px;
 	margin: 05px 0px 40px;
@@ -449,9 +465,33 @@ color: rgb(13, 236, 106);
 	color: #fff;
 	font-size: 30px;
 }
+#contact .contact-text-title2 {
+	margin-top: 0px;
+	padding-bottom: 20px;
+	margin-top: -15px;
+}
 #contact h3 {
 	padding-top: 35px;
 	padding-bottom: 0px;
 	font-size: 25px;
+}
+#contact .formStyle {
+	padding: 30px;
+	background: linear-gradient(to left, #755f62 0%, #9c1c26 100%);
+    border-radius: 50px 0px;
+    color: #fff;
+	/*box-shadow: 11px 11px 10px #f1e2e4;*/
+}
+#features h6 {
+	margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto; 
+	color:#726f6f;
+	border: solid;
+	border-radius: 00px 60px 0px 60px;
+	padding: 50px;
+	box-shadow: 20px 20px 20px rgba(170, 77, 77, 0.555);
+	line-height: 30px;
+	text-align: left 
 }
 }
