--- a/public/css/style copy 2.css
+++ b/public/css/style copy 2.css
@@ -147,36 +147,6 @@ padding-bottom: 30px;
   box-shadow: 20px 20px 20px rgba(170, 77, 77, 0.555);
   line-height: 0px;
 }
-#features details summary:focus {
-  outline:none;
-}
-#features details[open] {
-  display:block;
-  padding-bottom:25px;
-  padding-top:10px;
-  animation: open .s linear;
-}
-#features details[open] summary {
-  position:absolute;
-  bottom: 0;
-  left:0;
-}
-
-#features details #open{padding-left:5px;text-align:middle;}
-#features details #open:after{
-    display: inline-block;
-    position:relative;
-    top: -3px;
-    padding-left: 8px;
-    content: "\00bb";
-    transform: rotate(90deg);
-}
-#features details[open] #open{display:none;}
-#features details #close{display:none;}
-#features details[open] #close{display:block;}
-
-::-webkit-details-marker {display: none;}
-
 /* ---end read more -- */  
 
 /* Portfolio Section */
@@ -194,6 +164,7 @@ padding-bottom: 30px;
 	border-radius: 60px 0px 60px 0px;
 	box-shadow: 12px 8px 12px rgba(246, 222, 248, 0.63);	
 	border-top:2px solid rgb(255, 255, 255); 
+	border-right:2px solid rgb(255, 255, 255); 
 }
 .portfolio-item .hover-bg {
 	overflow: hidden;
@@ -212,17 +183,6 @@ padding-bottom: 30px;
 	opacity: 0;
 	transition: all 0.5s;
 	cursor: zoom-in;
-}
-.hover-bg .hover-text>h4 {
-	opacity: 0;
-	color: #fff;
-	-webkit-transform: translateY(100%);
-	transform: translateY(100%);
-	transition: all 0.3s;
-	font-size: 18px;
-	letter-spacing: 1px;
-	font-weight: 500;
-	text-transform: uppercase;
 }
 .hover-bg:hover .hover-text>h4 {
 	opacity: 1;
@@ -494,9 +454,5 @@ color: rgb(13, 236, 106);
 	box-shadow: 20px 20px 20px rgba(170, 77, 77, 0.555);
 	line-height: 30px;
 }
-.form-check-label {
-	margin-left: 0px;
-	padding-bottom: 0px;
-  }
 
 }
